# masbot

./: .gitmodules  diff_drive_controller_README.md  diff_drive_controller_launch.py  diff_drive_controller_node.py  diff_drive_test.py  frames_2025-04-24_13.17.10.gv  setup.py
diff_drive_controller/: package.xml  setup.py
diff_drive_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
diff_drive_controller/install/diff_drive_controller/share/diff_drive_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
diff_drive_controller/launch/: diff_drive_controller.launch.py  diff_drive_controller_node.launch.py
diff_drive_controller/log/: latest_build
diff_drive_controller/test/: README.md
masbot_description/: CMakeLists.txt  README.md  masbot_hardware_interface.xml  package.xml
masbot_description/config/: diff_drive_controller.yaml  nav2_params.yaml  slam_params.yaml
masbot_description/include/masbot_description/: masbot_hardware_interface.hpp
masbot_description/launch/: diff_drive.launch.py  masbot.launch.py  navigation.launch.py  simple_nav2.launch.py  slam.launch.py  slam_toolbox.launch.py  test_map.launch.py  test_tf.launch.py  view_robot.launch.py
masbot_description/maps/: map.yaml
masbot_description/rviz/: masbot.rviz  navigation.rviz  slam.rviz
masbot_description/scripts/: diff_drive_controller.py  key_teleop.py
masbot_description/src/: masbot_hardware_interface.cpp
masbot_description/urdf/: masbot.urdf  masbot.urdf.xacro
