<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>masbot_description</name>
  <version>0.1.0</version>
  <description>
    ROS2 package for MasBot robot description, including URDF model, TF tree, and navigation capabilities
  </description>
  <maintainer email="user@example.com">MasBot User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rplidar_ros</depend>
  <depend>v4l2_camera</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
 <!-- Add these dependencies for the diff_drive_controller -->
<depend>rclpy</depend>
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>tf2_ros</depend>
<depend>tf_transformations</depend>
<!-- Remove MPU6050 dependency if it exists -->
<!--<depend>mpu6050_driver</depend>-->
  <!-- For hardware interface -->
  <depend>controller_interface</depend>
  <depend>joint_state_broadcaster</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
